Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -52,9 +52,31 @@ body {
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
 
+
 .card.open {
     transform: translateY(-100px);
     opacity: 1;
+}
+
+
+.lists-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: 50%;
+}
+
+.list li {
+    text-align: left;
+    font-size: 16px;
+    padding: 5px 0;
 }
 
 .front {
